add and style advantages and order sections

--- a/index.html
+++ b/index.html
@@ -27,6 +27,83 @@
                     Кожен, хто шукає хороший готель, переймається тим, як до нього дістатися. До готелю можна доїхати на електричці з Одеси або трасою Одеса–Рені, якщо їдете автомобілем. Зняти готель у Затоці можна просто на сайті, за телефоном чи електронною поштою. Найкращі готелі курорту чекають на вас!
                 </p>
             </section>
+            <section class="advantages">
+                <div class="advantages_blocks">
+                    <div class="advantage_block">
+                        <img class="advantage_img" src="./assets/images/card1.png" alt="photo">
+                        <div class="advantage_description">
+                            <h4>Відмінна новина для гостей готелю</h4>
+                            <div class="date">
+                                <span>Коли: </span>Четвер,  21 Червня
+                            </div>
+                            <p class="description">
+                                Ми запускаємо Room Service Menu! 
+                            </p>
+                            <p class="description">
+                                Тепер ви з 10:00 до 22:50 в будні і вихідні, можете замовити
+                                собі страви від наших партнерів з ресторану за доставкою 
+                                прямо в номер. Естетична подача, смачна їжа і прекрасний 
+                                вид на море - ідеальне поєднання! А крім того, бронюючи 
+                                проживання ви також можете замовити собі вечерю в 
+                                ресторані в будь-який день свого перебування!
+                            </p>
+                            <p class="description">
+                                Але і це ще не все!
+                            </p>
+                            <p class="description">
+                                Від нашого готелю до ресторану буде надаватися 
+                                безкоштовний трансфер. Подаруйте собі чудовий відпочинок 
+                                у моря разом з нашим готелем
+                            </p>
+                            <a href="#" class="more_info">Дізнатись більше</a>
+                        </div>
+                    </div>
+                    <div class="advantage_block">
+                        <img class="advantage_img" src="./assets/images/card2.png" alt="photo">
+                        <div class="advantage_description">
+                            <h4>Готель з басейном на березі моря користується великим попитом</h4>
+                            <div class="date">
+                                <span>Коли: </span>Четвер,  21 Червня
+                            </div>
+                            <p class="description">
+                                Мрієте про відпочинок в Затоці з басейном біля моря та з 
+                                комфортом і цікавими розвагами? У нашому готелі для цього є 
+                                все необхідне! Ви можете купатися навіть, коли море холодне 
+                                або штормить, адже влітку 2017 року в готелі з'явилося два 
+                                відкритих басейни. Басейн для дорослих має розміри 25х10 метрів, 
+                                його глибина - 1,6-1,8 метрів. Дитячий басейн глибиною 0,6 метра 
+                                і діаметром 15 метрів обладнаний водними гірками, від яких ваші 
+                                маленькі непосиди будуть в захваті. 
+                            </p>
+                            <a href="#" class="more_info">Дізнатись більше</a>
+                        </div>
+                    </div>
+                    <div class="advantage_block">
+                        <img class="advantage_img" src="./assets/images/card3.png" alt="photo">
+                        <div class="advantage_description">
+                            <h4>Ідеальне місце для ваших свят</h4>
+                            <div class="date">
+                                <span>Коли: </span>Четвер,  21 Червня
+                            </div>
+                            <p class="description">
+                                Меню ресторану не розчарує гостей. Професійні 
+                                кухарі віртуозно готують страви європейської кухні. 
+                                На святковому столі кожен знайде частування за 
+                                смаком зі свіжих продуктів, закуплених у перевірених
+                                постачальників. Також в розпорядженні гостей - бар 
+                                ресторану, який порадує відмінними коктейлями.
+                                Враження про організацію банкету багато в чому 
+                                залежить від якості сервісу. ввічливий і тактовний 
+                                персонал ресторану, завжди прислухається до 
+                                побажань гостей, і вас не підведе. Кухарі швидко 
+                                приготують страви, а офіціанти забезпечать уважне і 
+                                ненав'язливе обслуговування.
+                            </p>
+                            <a href="#" class="more_info">Дізнатись більше</a>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <section class="info container">
                 <h2>Чому варто зняти готель у Нас?
                 </h2>
@@ -36,6 +113,16 @@
                 <p class="description">
                     При цьому ви отримуєте максимум задоволення і гарантовану безпеку: пансіонат охороняється цілодобово, стійка реєстрації працює без перерв. Намагатимемося виконати будь-які ваші побажання, щоб ви залишились задоволені.
                 </p>
+            </section>
+            <section class="order">
+                <div class="to_form">
+                    <h2>Забронювати номер
+                    </h2>
+                    <p class="description centered">
+                        Ми приймаємо замовлення цілодобово та без вихідних. Наберіть номер і скажіть, у яких апартаментах хочете поселитися.  Або заповніть всі поля форми та надішліть заявку. Обов’язково вкажіть ваш телефон та адресу електронної пошти для зворотного зв’язку.
+                    </p>
+                    <button class="btn">Переглянути</button>
+                </div>
             </section>
         </main>
     </div>
